# Localquens

./: .flatpak-manifest.json  CMakeLists.txt  README.md  io.github.robinpie.localquens.desktop  io.github.robinpie.localquens.json  io.github.robinpie.localquens.metainfo.xml
src/: CMakeLists.txt  controller.cpp  controller.h  loremipsum.cpp  loremipsum.h  main.cpp
src/ui/: About.qml  GlobalMenu.qml  Main.qml  PageHeader.qml  Settings.qml
